tint support + row 2

--- a/mapping.json
+++ b/mapping.json
@@ -62,5 +62,53 @@
   "crafting_table_front",
   "furnace_front_on",
   "furnace_top",
-  "spruce_sapling"
+  "spruce_sapling",
+  "white_wool",
+  "spawner",
+  "powder_snow",
+  "ice",
+  "grass_block_snow",
+  "cactus_top",
+  "cactus_side",
+  "cactus_bottom",
+  "clay",
+  "sugar_cane",
+  "note_block",
+  "jukebox_top",
+  "lily_pad",
+  "mycelium_side",
+  "mycelium_top",
+  "birch_sapling",
+  "torch",
+  "oak_door_top",
+  "iron_door_top",
+  "ladder",
+  "oak_trapdoor",
+  "iron_bars",
+  "farmland_moist",
+  "farmland",
+  "wheat_stage0",
+  "wheat_stage1",
+  "wheat_stage2",
+  "wheat_stage3",
+  "wheat_stage4",
+  "wheat_stage5",
+  "wheat_stage6",
+  "wheat_stage7",
+  "lever",
+  "oak_door_bottom",
+  "iron_door_bottom",
+  "redstone_torch",
+  "mossy_stone_bricks",
+  "cracked_stone_bricks",
+  "pumpkin_top",
+  "netherrack",
+  "soul_sand",
+  "glowstone",
+  "piston_top",
+  "piston_top_sticky",
+  "piston_side",
+  "piston_bottom",
+  "piston_inner",
+  "melon_stem"
 ]
