--- a/mapping.json
+++ b/mapping.json
@@ -1,114 +1,4 @@
 [
-  "grass_block_top",
-  "stone",
-  "dirt",
-  "grass_block_side",
-  "oak_planks",
-  "smooth_stone_slab_side",
-  "smooth_stone",
-  "bricks",
-  "tnt_side",
-  "tnt_top",
-  "tnt_bottom",
-  "cobweb",
-  "poppy",
-  "dandelion",
-  "nether_portal",
-  "oak_sapling",
-  "cobblestone",
-  "bedrock",
-  "sand",
-  "gravel",
-  "oak_log",
-  "oak_log_top",
-  "iron_block",
-  "gold_block",
-  "diamond_block",
-  "debug",
-  "debug",
-  "debug",
-  "red_mushroom",
-  "brown_mushroom",
-  "jungle_sapling",
-  "fire_0",
-  "gold_ore",
-  "iron_ore",
-  "coal_ore",
-  "bookshelf",
-  "mossy_cobblestone",
-  "obsidian",
-  "grass_block_side_overlay",
-  "short_grass",
-  "snow",
-  "debug",
-  "debug",
-  "crafting_table_top",
-  "furnace_front",
-  "furnace_side",
-  "dispenser_front",
-  "dispenser_front_vertical",
-  "sponge",
-  "glass",
-  "diamond_ore",
-  "redstone_ore",
-  "oak_leaves",
-  "coarse_dirt",
-  "stone_bricks",
-  "dead_bush",
-  "fern",
-  "debug",
-  "debug",
-  "crafting_table_side",
-  "crafting_table_front",
-  "furnace_front_on",
-  "furnace_top",
-  "spruce_sapling",
-  "white_wool",
-  "spawner",
-  "powder_snow",
-  "ice",
-  "grass_block_snow",
-  "cactus_top",
-  "cactus_side",
-  "cactus_bottom",
-  "clay",
-  "sugar_cane",
-  "note_block",
-  "jukebox_top",
-  "lily_pad",
-  "mycelium_side",
-  "mycelium_top",
-  "birch_sapling",
-  "torch",
-  "oak_door_top",
-  "iron_door_top",
-  "ladder",
-  "oak_trapdoor",
-  "iron_bars",
-  "farmland_moist",
-  "farmland",
-  "wheat_stage0",
-  "wheat_stage1",
-  "wheat_stage2",
-  "wheat_stage3",
-  "wheat_stage4",
-  "wheat_stage5",
-  "wheat_stage6",
-  "wheat_stage7",
-  "lever",
-  "oak_door_bottom",
-  "iron_door_bottom",
-  "redstone_torch",
-  "mossy_stone_bricks",
-  "cracked_stone_bricks",
-  "pumpkin_top",
-  "netherrack",
-  "soul_sand",
-  "glowstone",
-  "piston_top",
-  "piston_top_sticky",
-  "piston_side",
-  "piston_bottom",
-  "piston_inner",
-  "melon_stem"
+  "grass_block_top", "stone", "dirt", "grass_block_side", "oak_planks", "smooth_stone_slab_side", "smooth_stone", "bricks", "tnt_side", "tnt_top", "tnt_bottom", "cobweb", "poppy", "dandelion", "nether_portal", "oak_sapling", "cobblestone", "bedrock", "sand", "gravel", "oak_log", "oak_log_top", "iron_block", "gold_block", "diamond_block", "debug", "debug", "debug", "red_mushroom", "brown_mushroom", "jungle_sapling", "fire_0", "gold_ore", "iron_ore", "coal_ore", "bookshelf", "mossy_cobblestone", "obsidian", "grass_block_side_overlay", "short_grass", "snow", "debug", "debug", "crafting_table_top", "furnace_front", "furnace_side", "dispenser_front", "dispenser_front_vertical", "sponge", "glass", "diamond_ore", "redstone_ore", "oak_leaves", "coarse_dirt", "stone_bricks", "dead_bush",
+  "fern", "debug", "debug", "crafting_table_side", "crafting_table_front", "furnace_front_on", "furnace_top", "spruce_sapling", "white_wool", "spawner", "powder_snow", "ice", "grass_block_snow", "cactus_top", "cactus_side", "cactus_bottom", "clay", "sugar_cane", "note_block", "jukebox_top", "lily_pad", "mycelium_side", "mycelium_top", "birch_sapling", "torch", "oak_door_top", "iron_door_top", "ladder", "oak_trapdoor", "iron_bars", "farmland_moist", "farmland", "wheat_stage0", "wheat_stage1", "wheat_stage2", "wheat_stage3", "wheat_stage4", "wheat_stage5", "wheat_stage6", "wheat_stage7", "lever", "oak_door_bottom", "iron_door_bottom", "redstone_torch", "mossy_stone_bricks", "cracked_stone_bricks", "pumpkin_top", "netherrack", "soul_sand", "glowstone", "piston_top", "piston_top_sticky", "piston_side", "piston_bottom", "piston_inner", "pumpkin_stem"
 ]
